components/baseui/src/main/kotlin/com/example/base/ui/ui/errors/UIError.kt
package com.example.base.ui.ui.errors

data class UIError(val throwable: Throwable, val message: String)